--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "better-sqlite3": "^12.2.0",
+    "check-disk-space": "^3.4.0",
     "commander": "^14.0.0",
     "dotenv": "^17.2.1",
     "pino": "^9.9.0",
