--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "dev": "tsx src/cli/collector.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/cli/collector.js",
-    "validate": "tsx src/cli/validator.ts",
     "lint": "eslint . --ext .ts",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "validate": "tsx src/validator/cli.ts",
+    "validate:full": "tsx src/validator/cli.ts --mode full --sha verify"
   },
   "keywords": [],
   "author": "",
