--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "tsx src/cli/collector.ts",
+    "dev": "tsx src/receiver/cli/collector.ts",
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/cli/collector.js",
+    "start": "node dist/receiver/cli/collector.js",
     "lint": "eslint . --ext .ts",
     "test": "vitest run",
     "test:watch": "vitest",
