--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dotenv": "^17.2.1",
     "pino": "^9.9.0",
     "pino-pretty": "^13.1.1",
+    "uuid": "^11.1.0",
     "zod": "^4.1.1"
   }
 }
